--- a/css/myactivetab.css
+++ b/css/myactivetab.css
@@ -1,20 +1,1 @@
-#elmotasha3eb {
-    position: fixed;
-    /* Sit on top of the page content */
-    /* display: none; */
-    /* Hidden by default */
-    width: 100%;
-    /* Full width (cover the whole page) */
-    height: 100%;
-    /* Full height (cover the whole page) */
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(93, 51, 204, 0.29);
-    /* Black background with opacity */
-    z-index: 10000000;
-    /* Specify a stack order in case you're using a different order for other elements */
-    cursor: pointer;
-    /* Add a pointer on hover */
-}
+#elmotasha3eb {position: fixed;width: 100%;height: 100%;top: 0 !important;left: 0 !important;right: 0 !important;bottom: 0 !important;background-color: rgba(93, 51, 204, 0.29) !important;z-index: 10000000 !important;cursor: pointer !important;}
